NMJ Salesforce Project/src/objects/Sales__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City_of_Sale__c</fullName>
        <label>City of Sale</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Sale__c</fullName>
        <label>Date of Sale</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales</relationshipLabel>
        <relationshipName>Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <label>Sold To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales</relationshipLabel>
        <relationshipName>Sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Sale_Amount__c</fullName>
        <label>Total Sale Amount</label>
        <summarizedField>Items_Sold__c.Sub_Total__c</summarizedField>
        <summaryForeignKey>Items_Sold__c.Sale__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Sales</label>
    <nameField>
        <displayFormat>Sale # {00000000}</displayFormat>
        <label>Sales</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Matching_Contact_and_Family</fullName>
        <active>true</active>
        <description>The Contact Sold To Account and the Family Account should be same</description>
        <errorConditionFormula>Family__r.Id  &lt;&gt;   Sold_To__r.Account.Id</errorConditionFormula>
        <errorDisplayField>Family__c</errorDisplayField>
        <errorMessage>Choose the correct Family (Account)</errorMessage>
    </validationRules>
</CustomObject>